# PIDL

./: README.md  pidl.py  pidl_cgen.py  pidl_schema.py  ridl.py  ridl_cgen.py  ridl_schema.py
PIDLR/: Cargo.toml
PIDLR/src/: main.rs  pidl_parser.rs
c_examples/: tmp102.c
devices/: ina219.pidl  ina219.ridl  mlx90640.pidl  pcf8574.pidl  tmp102.pidl  tmp102.ridl
