[package]
name = "PIDLR"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
clap = "3.0.0-beta.5"
tera = "1.15.0"
glob = "0.3.0"

[profile.release]
lto = true
opt-level = 3